# Inforge

./: .gitignore  README.md  pyproject.toml
authcore/: apps.py  urls.py  views.py
core/: settings.py  urls.py
statics/accounts/css/: style_login.css  style_signup.css
statics/accounts/js/: style_login.js  style_signup.js
statics/summarizer/css/: style_summarizer.css
statics/summarizer/js/: style_summarizer.js
summarizer/: apps.py  views.py
templates/account/: base_entrance.html  login.html  signup.html
templates/dashboard/: dashboard.html
templates/summarizer/: summarizer.html
